--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,7 +18,7 @@
     	</div><!--/row-->
     </div><!--container-->
   
-  <%- body %>
+  [<%- body %>]
   
   <!--scripts loaded here-->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
