add /dup endpoint

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,3 @@
-index hello asdqdwqwd
+    <h2>Shotspy API</h2>
+    <div>/ss - screenshot from url</div>
+    <div>/dup - duplicate image from url</div>
