--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,19 +6,16 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 </head>
 <body>
- 
   
-    <div class="container">
+  <div class="container">
     	<div class="row">
     		<div class="col">
-    		    <h2>Shotspy</h2>
-    		    <div>/ss - screenshot from url</div>
-    		    <div>/copy - duplicate image from url</div>
+    		
+    		  <%- body %>
+    		
     		</div>
     	</div><!--/row-->
-    </div><!--container-->
-  
-  [<%- body %>]
+  </div><!--container-->
   
   <!--scripts loaded here-->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
